--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"AllowedHosts": "*",
+	"MariaDbVersion": "10.9.3-MariaDB",
+	"ConnectionStrings": {
+		"Lab3Db": "server=localhost;user=dbuser;password=1234;database=lab3db"
+	}
 }
